# bratools

./: .gitignore  README.md  pyproject.toml
src/bratools/: anncut.py  anntoconll.py  backup.py  bioes2standoff.py  diff_and_mark.py  ent2event.py  fix_annotations.py  generate-static.py  merge.py  metamaptaggerservice.py  norm_db_init.py  sentencesplit.py  ssplit.py  xmlize.py
