[tool.poetry]
name = "bratools"
version = "0.1.3"
description = "brat tools"
authors = ["German Arutyunov <germanarutyunov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "bratools", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
